Fix Java 17 List access in audit log test